<resources>
    <string name="app_name">MachevaraTalkNeil</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="label_password">※Alphanumeric Characters (4-12)</string>
    <string name="label_warning">Email or password is incorrect</string>
    <string name="label_email">※Alphanumeric Characters</string>
    <string name="restore_account">Restore Account</string>
    <!--<string name="error_msg_confirm_password">\u2022正しいメールアドレスを入力してください。\n\n\u2022パスワードを入力してください。</string>-->
    <string name="error_msg_confirm_password">パスワードとパスワードの確認が一致しない</string>
    <string name="registration_profile">Please register your profile picture clearly for identifying your face.</string>
    <string name="registration_profile_photo">What is a profile photo?</string>
    <string name="registration_profile_about">The first thing a visitor sees is \"profile picture\". If you set up a picture that attracted much attention, you will surely increase the number of times nature talks with customers!</string>
    <string name="registration_profile_note">You can not start work if you hide your face. Use of pictures other than yourself is prohibited.</string>
    <string name="registration_profile_error">Please register your profile picture.</string>
    <string name="title_image_registration">Profile photo registration</string>
    <string name="confirm_next">next</string>
    <string name="profile_camera">Take a picture</string>
    <string name="profile_gallery">Photo Library</string>
    <string name="cancel">Cancel</string>
    <string name="required">Required</string>
    <string name="nickname">Nickname (1-12)</string>
    <string name="any">Any</string>
    <string name="age_registration">20-years-old</string>
    <string name="area_registration">Place</string>
    <string name="work_registration">Occupation</string>
    <string name="introduction">Introduction</string>
    <string name="submit">Submit</string>
    <string name="ivArrowDown">Arrow Down</string>
    <string name="btn_forgot_password">Submit</string>
    <string name="new_password">New Password</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="error_description">Lack of parameters</string>
    <string name="nineteen">19</string>
    <string name="twentysix">26</string>
    <string name="twenty">20</string>
    <string name="twentyone">21</string>
    <string name="twentytwo">22</string>
    <string name="twentythree">23</string>
    <string name="twentyfour">24</string>
    <string name="twentyfive">25</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="entertainment">entertainment</string>
    <string name="congrats">Congratulations!</string>
    <string name="welcome_mainActivity">Welcome to Main Activity</string>
</resources>
