<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_box"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNineteen"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_login_gray_button"
                android:text="@string/nineteen"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvTwenty"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_login_gray_button"
                android:text="@string/twenty"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvTwenty1"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_login_gray_button"
                android:text="@string/twentyone"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
            android:id="@+id/tvTwenty2"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_login_gray_button"
            android:text="@string/twentytwo"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"/>
            <TextView
            android:id="@+id/tvTwenty3"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_login_gray_button"
            android:text="@string/twentythree"
            android:textColor="@color/black"
                android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_blue_green_big"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>


    </ScrollView>




</LinearLayout>