<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight=".5"
            android:layout_marginRight="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/blueGreen"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:id="@+id/tvErrorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_box"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:background="@drawable/edittext_field"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_email"
                android:layout_marginEnd="10dp"
                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="240dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:singleLine="true"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/label_email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:background="@drawable/edittext_field"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:background="@drawable/login_password"
                android:layout_marginRight="5dp"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:singleLine="true"
                android:maxLength="12"
                />

            <ImageView
                android:id="@+id/ivViewPassword"
                android:layout_width="35dp"
                android:layout_weight=".02"
                android:layout_height="15dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/password"
                android:layout_gravity="center_vertical"

                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/label_password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            />

        <!--  <ProgressBar
              android:id="@+id/pbProgressBar"
              android:layout_width="20dp"
              android:layout_height="20dp"
              android:layout_gravity="center_horizontal"
              android:visibility="gone"
              >
          </ProgressBar>-->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_login_gray_button"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blueGreen"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>



</LinearLayout>