<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    >

    <LinearLayout
        android:id="@+id/ll_upload_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_white_small">

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_camera"
                android:textSize="16sp"
                android:textColor="@color/darkBlue"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/bg_border_bottom"/>

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_gallery"
                android:textSize="16sp"
                android:textColor="@color/darkBlue"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_small"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/darkBlue"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>